syntax = "proto3";

package tasks;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
}

message CreateTaskRequest {
  string title = 1;
  bool completed = 2;
  int32 user_id = 3;
  string planned_at = 4; // ISO datetime string, optional
}

message ListTasksRequest {}

message Task {
  int32 id = 1;
  int32 user_id = 2;
  string title = 3;
  bool completed = 4;
  string created_at = 5; // ISO datetime string
  string planned_at = 6; // ISO datetime string or empty
}

message TaskResponse {
  Task task = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}
